(KSICAPI-530)* IMPROVEMENT: New verification rules for calendar hash chain reception from extending service (returning NA(GEN-2) in case of a service failure).
(KSICAPI-530)* IMPROVEMENT: KSI_RuleVerificationResult has additional fields with error information. Will be filled in case verification result is NA(GEN-2).

Version 3.19

2019-02-01 release(3.19.2938)
* FEATURE: Added new async handle state KSI_ASYNC_STATE_ERROR_NOTICE for returning errors that whould be otherwise resolved internally (eg. in case of high availability where one of the configured endpoint encounter connection issues).
* FEATURE: Added new option KSI_ASYNC_OPT_CONF_CONSOLIDATE_CALLBACK for overriding default consolidation handling.
* FEATURE: Added async service option KSI_ASYNC_OPT_CONNECTION_STATE_CALLBACK for setting connection state listener.
* FEATURE: Added prefix string format support to KSI_LOG_logBlob. Interface remains fully backwards compatible.
* FEATURE: Added find function to KSI_List interface.
* IMPROVEMENT: Helper interface for creating signing KSI_AsyncHandle.
* IMPROVEMENT: Added async request recycle handling for reducing memory allocations.
* IMPROVEMENT: Enhanced async client logging, by adding client and request id's. Provides more distinguishable log entries in case of high availability service.
* IMPROVEMENT: Added async TCP peer connection POLLHUP signal handling. Requests will return immediately with error state instead of waiting for timeout.
* IMPROVEMENT: Failing test TestPKICertificateToString fixed with corrections made to the expired certificates.
* BUGFIX: Made URI schemes case insensitive.
* BUGFIX: RPM build fixed when there is libksi already installed with different binary interface version.

Version 3.18
* IMPROVEMENT: Function KSI_CTX_getLastFailedSignature is deprecated. See KSI_VERIFICATION_POLICY_EMPTY for replacement.
* BUGFIX: Made URI schemes case insensitive.